--- a/countDown.html
+++ b/countDown.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <header只使用了setTimeout实现的倒计时</header> 
+    <header>只使用了setTimeout实现的倒计时</header> 
     <button value="" id="btn">抢购</button>
     <div id="time"></div>
     <script>
